2006-04-03  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/global.hxx (toVector): new function added.

	* source/inc/numeric/lpmodel.hxx
	* source/numeric/lpmodel.cxx: changed argument types of several variable
	boundary related functions from unsigned long to size_t.

	* source/inc/numeric/type.hxx: added javadoc comments to 2 enums.

	* source/numeric/lpsimplex.cxx: removed unused header include.  Did a
	major rewrite of the initial solution search algorithm for bounded
	revised simplex method (BoundedRevisedSimplexImpl).  Extracted iteration
	variable initialization part into its own method to make it easier to
	follow.

2006-03-26  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpsimplex.cxx: worked on fixing initial solution 
	search algorithm, and did some code cleanup.  Moved two structs inside
	BoundedRevisedSimplexImpl class since they are only used in that class.

2006-03-16  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpmodel.hxx
	* source/numeric/lpmodel.cxx: added a bunch of new methods to 
	lp::Model to deal with manipulation of temporary model object during
	solver run.

	* source/numeric/lpsimplex.cxx: added pre- and post-run process
	routines to reduce the size of temporary model object in order to 
	improve the chance of finding a solution.  Not sure whether this is
	truly effective.

	* workben/Makefile
	* workben/addon_pkg/Makefile_build: changed CPP to CXX.

	* workben/simplex_test.cxx: modified test case.

2006-02-16  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/lpsimplex.cxx: fixed incorrect way to access element
	in the first column of RHS matrix.  This error caused the two-phase 
	search to go into an infinite loop.

2006-02-15  Tor Lillqvist  <tml@novell.com>

	Enable building of scsolver with MSVC7.1:
	
	* source/inc/baselistener.hxx: Include cppu/macros.hxx to get
	SAL_CALL definition.

	* source/inc/baselistener.hxx