@@ -1,3 +1,15 @@
+2006-04-04  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/numeric/lpmodel.cxx (queryEnteringNBVar): Added new code to 
+	check for constant equivalent boundary condition, without which we may
+	reach an "optimum" solution only to realize that that solution is not
+	really feasible.  Also did some trivial code cleanup.
+
+	* source/numeric/lpmodel.cxx (buildInitialVars): Switched to using a
+	temporary model instead of an original one.  The temporary model has
+	additional constraints for slack variables which the original model
+	lacks.
+
 2006-04-03  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* source/inc/global.hxx (toVector): new function added.
